fix: unusable scrollbar

--- a/src/css/base/index.css
+++ b/src/css/base/index.css
@@ -9,6 +9,7 @@ html, body {
     -moz-osx-font-smoothing: grayscale;
     height: 100%;
     min-height: 100vh;
+    overflow: auto;
   }
   
   #root {
